Extract GC options to new configuration file conf/jvm.options